name:                d-env
version:             0.1.0.0
synopsis:            Runs gwb with appropriate environment variables
description:         Rubs gwb with appropriate environment variables
homepage:            https://github.com/githubuser/d-env#readme
license:             BSD3
license-file:        LICENSE
author:              Deepak Jayakumar
maintainer:          dpakj989@gmail.com
copyright:           2016 Deepak Jayakumar
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , turtle
  default-language:    Haskell2010

executable d-env-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , d-env
                     , optparse-applicative
  default-language:    Haskell2010

test-suite d-env-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , d-env
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/DPakJ989/d-env
